--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ethan Fidl/er</title>
-    <meta name="description" content="I made a webpage for fun but also because nearly every website on">
+    <meta name="description" content="I made a webpage for fun but also because there were a lot of jobs on PAL that had webdev on them and I didn't have any webdev projects">
     <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="er.css">
     <script src="dark.js"></script>
