--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="icon" href="icon/favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="icon/site.webmanifest">
+    <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="icons/site.webmanifest">
   </head>
 
   <body>
