--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
 
     </div>
-    
+
     <div id="body-elements">
 
       <div class="box" id="menu-box">
@@ -68,7 +68,7 @@
           <li class="section-item"><p>Resume: add a link to my resume, direct download?</p></li>
           <li class="section-item"><p>Links: add links to all of my worksafe socials.</p></li>
           <li class="section-item"><p>About: write about myself outside of work.</p></li>
-          <li class="section-item"><p>Home: make this page an introduction</p></li>
+          <li class="section-item"><p>Home: make this page an introduction, avatar</p></li>
           <li class="section-item"><p>Sidebar: Add titles to all of the links?</p></li>
           <li class="section-item"><p>Etc: update favicons, cmyk color mode?</p></li>
         </ul>
