--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <li class="section-item"><p>The bot has role adding functionality for members, and reverse image search functionality.</p></li>
           <li class="section-item"><p>Functionality that works as an extension of the pinned messages feature built into discord. It takes a message sent a member of the server, formats it and highlights it in a special channel.
           <li class="section-item"><p>There is a built in noise machine that plays a recorded soundscape into the connected Voice Channel.</p></li>
-          <li class="section-item"><p>A command that uses Reddit scraper to retrive, format, and send a random post from the specified subreddit.</p></li>
+          <li class="section-item"><p>A command that uses a Reddit scraper to retrive, format, and send a random post from the specified subreddit.</p></li>
         </ul>
 
         <h4 class="section-sublabel"><a href="https://github.com/ecfidler/ecfidler.github.io" target="_blank" title="link to the project on my github">fidl.dev</a></h4>
